--- a/index.html
+++ b/index.html
@@ -525,27 +525,27 @@
             </div>
             <div class="systems-grid">
                 <div class="system-item">
+                    <img src="./runget.png" alt="Runget Logo" width="248" height="87">
+                    <h3>Runget</h3>
+                </div>
+                <div class="system-item">
                     <img src="https://assets.ubuntu.com/v1/29985a98-ubuntu-logo32.png" alt="Ubuntu Logo" width="32" height="32">
                     <h3>Ubuntu</h3>
                 </div>
                 <div class="system-item">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqMV5jTVWkdHRNkn3Iz0Bn_DuTwsWmp0gE1w&s" alt="Debian Logo" width="32" height="32">
-                    <h3>Debian</h3>
-                </div>
-                <div class="system-item">
-                    <div class="system-icon">🐧</div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/Zorin_Logomark.svg" alt="ZorinOS Logo" width="32" height="32">
                     <h3>ZorinOS</h3>
                 </div>
                 <div class="system-item">
-                    <div class="system-icon">🐧</div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Linux_Mint_logo_without_wordmark.svg/1024px-Linux_Mint_logo_without_wordmark.svg.png" alt="Linux Mint Logo" width="32" height="32">
                     <h3>Linux Mint</h3>
                 </div>
                 <div class="system-item">
-                    <div class="system-icon">🐧</div>
-                    <h3>Runget</h3>
+                    <img src="https://free-astro.org/images/0/04/Debian_logo.png" alt="Debian Logo" width="32" height="32">
+                    <h3>Debian</h3>
                 </div>
                 <div class="system-item">
-                    <div class="system-icon">🔜</div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Unofficial_Windows_logo_variant_-_2002%E2%80%932012_%28Multicolored%29.svg/1161px-Unofficial_Windows_logo_variant_-_2002%E2%80%932012_%28Multicolored%29.svg.png" alt="Windows Logo" width="32" height="32">
                     <h3>Windows <span class="coming-soon">Скоро</span></h3>
                 </div>
             </div>
