--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             </div>
             <div class="systems-grid">
                 <div class="system-item">
-                    <img src="./runget.png" alt="Runget Logo" width="248" height="87">
+                    <img src="./runget.jpeg" alt="Runget Logo" width="32" height="32">
                     <h3>Runget</h3>
                 </div>
                 <div class="system-item">
