--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 Andryemu. Все права защищены.</p>
+                <p>&copy; 2025 Kolyadual. Все права защищены.</p>
             </div>
         </div>
     </footer>
