--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
         <div class="container">
             <h2>Начните использовать Andryemu уже сегодня</h2>
             <p>Скачайте последнюю версию эмулятора и наслаждайтесь Android-приложениями на своем компьютере с максимальным комфортом</p>
-            <a href="#" class="btn">Скачать для Linux</a>
+            <a href="https://drive.google.com/drive/folders/13i5GfijTH7Mcc_i62s1No8QNfs1ncDEj?usp=sharing" class="btn">Скачать для Linux</a>
             <a href="#" class="btn btn-secondary">Версия для Windows <span class="coming-soon">Скоро</span></a>
         </div>
     </section>
@@ -575,7 +575,7 @@
                         <li><a href="#">Главная</a></li>
                         <li><a href="#features">Возможности</a></li>
                         <li><a href="#systems">Поддерживаемые ОС</a></li>
-                        <li><a href="#download">Скачать</a></li>
+                        <li><a href="https://drive.google.com/drive/folders/13i5GfijTH7Mcc_i62s1No8QNfs1ncDEj?usp=sharing">Скачать</a></li>
                     </ul>
                 </div>
             </div>
